-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.6.0-rc1
-
None
-
Windows 7 64 bit
-
Ie2e75ba23d92482e1365664f64728422e2003b32
- Start Creator with enabled ModelEditor plugin.
- Open the attached file
.
Creator crashes:1 RaiseException KERNELBASE 0x769bc42d 2 _CxxThrowException throw.cpp 154 0x5bf30b86 3 qark::QXmlInArchive::readTag qxmlinarchive.h 904 0x518b88dd 4 qark::QXmlInArchive::visit<qmt::Project,qmt::Uid,qmt::Uid> qxmlinarchive.h 683 0x518f37cc 5 qark::QXmlInArchive::GetterSetterAttrNode<qmt::Project,qmt::Uid,qmt::Uid const &>::accept qxmlinarchive.h 185 0x518f4697 6 qark::QXmlInArchive::readChildren qxmlinarchive.h 594 0x518b8816 7 qark::QXmlInArchive::visit<qmt::Project> qxmlinarchive.h 619 0x518f364a 8 qark::QXmlInArchive::ObjectNode<qmt::Project>::accept qxmlinarchive.h 119 0x518f46b7 9 qark::QXmlInArchive::readChildren qxmlinarchive.h 594 0x518b8816 10 qark::QXmlInArchive::visit qxmlinarchive.h 610 0x518bdf73 11 qark::QXmlInArchive::TagNode::accept qxmlinarchive.h 102 0x518afba7 12 qark::QXmlInArchive::append qxmlinarchive.h 393 0x518b0361 13 qark::operator>><qark::QXmlInArchive> serialize.h 167 0x5189114f 14 qark::operator>><qark::QXmlInArchive,qark::End> serialize.h 88 0x518919b8 15 qmt::ProjectSerializer::load projectserializer.cpp 144 0x518f1fca 16 qmt::ProjectController::load projectcontroller.cpp 101 0x5188cbc6 17 qmt::DocumentController::loadProject documentcontroller.cpp 300 0x5184af41 18 ModelEditor::Internal::ModelDocument::load modeldocument.cpp 153 0x51a189d1 19 ModelEditor::Internal::ModelDocument::open modeldocument.cpp 77 0x51a185d7 20 Core::Internal::EditorManagerPrivate::openEditor editormanager.cpp 664 0x59f628f3 ... <Mehr>
Yes, the file is invalid. There's a ">" missing in line 4. Still, Creator should not crash when trying to open such a file.