ModelEditor: catch all exceptions on loading/saving model files

As reported in QTCREATORBUG-15256 an invalid model file crashes QtC on
loading the file. Not all exceptions were caught.

Change-Id: Ie2e75ba23d92482e1365664f64728422e2003b32
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>